Fix Header top spacing

--- a/pages/empreendimentos-interna/styles.scss
+++ b/pages/empreendimentos-interna/styles.scss
@@ -25,8 +25,13 @@
 body {
     background: #f6f6f6;
 }
+._navbar {
+    @include media-breakpoint-up(md) {
+        padding-top: 43px;
+    }
+}
 #page-empreendimentos-interna {
-    margin-top: 97px;
+    margin-top: 110px;
 
     ._page-title {
         margin-top: 10px;
